src/test/deca/context/invalid/classmethode11.deca
class A {
	void methode(int k) {
        int a=k;
        
	}
}

{
    A a=new A();
    a.methode();
    
}